# TEC

./: README.md  angular.json  package-lock.json  package.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
src/app/UI/account-button/: account-button.component.html  account-button.component.spec.ts  account-button.component.ts
src/app/admin-console/: admin-console.component.html  admin-console.component.spec.ts  admin-console.component.ts
src/app/home/: home.component.css  home.component.html  home.component.ts
src/app/training-env/: training-env.component.html  training-env.component.spec.ts  training-env.component.ts
