[package]
name = "tec"
version = "0.1.0"
description = "A Tauri App"
authors = ["Davide Prestileo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
chrono = "0.4.41"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32", "Win32_Foundation", "Win32_NetworkManagement", "Win32_Security", "Win32_NetworkManagement_NetManagement"] }
is_elevated = "0.1.2"

[profile.release]
opt-level = 3
strip = "symbols"
debug = false
